ProTrackDev/force-app/main/default/objects/TR_Ticket__c/TR_Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <nameField>
        <displayFormat>TKT-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>