ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>TR_Business_Impact__c</fullName>
    <label>Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Trivial</fullName>
            </value>
            <value>
                <fullName>1-Low</fullName>
                <isActive>false</isActive>
                <label>1-Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>