ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Deadline__c.field-meta.xml
<CustomField>
    <fullName>TR_Deadline__c</fullName>
    <description>Deadline to close the ticket</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>