ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Developer_Comment__c.field-meta.xml
<CustomField>
    <fullName>TR_Developer_Comment__c</fullName>
    <label>Developer Comment</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>