ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Ext_View_Ticket__c.field-meta.xml
<CustomField>
    <fullName>TR_Ext_View_Ticket__c</fullName>
    <description>Allows the Users to View Tickets (For Experience Cloud Only)</description>
    <formula>$Label.TR_exp_cloud_base_url&amp;&quot;/protrack/s/detail/&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Ticket (External)</label>
    <type>Text</type>
</CustomField>