ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Fixed_In__c.field-meta.xml
<CustomField>
    <fullName>TR_Fixed_In__c</fullName>
    <label>Fixed In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>