ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Functional_Comment__c.field-meta.xml
<CustomField>
    <fullName>TR_Functional_Comment__c</fullName>
    <inlineHelpText>Fill in here all the additional comments, screenshots or steps to reproduce the issue</inlineHelpText>
    <label>Comments / Notes / Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>