ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Log_Time__c.field-meta.xml
<CustomField>
    <fullName>TR_Log_Time__c</fullName>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>