ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Logged_by__c.field-meta.xml
<CustomField>
    <fullName>TR_Logged_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>