ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_My_Tickets_as_Tester__c.field-meta.xml
<CustomField>
    <fullName>TR_My_Tickets_as_Tester__c</fullName>
    <description>To create Salesforce record list view (My Ticket) where Tester = Logged In User</description>
    <formula>IF( TR_Tester__r.TR_User__r.Id  = $User.Id , TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Tickets as Tester</label>
    <type>Checkbox</type>
</CustomField>