ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_NameHyperLink__c.field-meta.xml
<CustomField>
    <fullName>TR_NameHyperLink__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;/lightning/r/TR_Ticket__c/&quot;+Id+&quot;/view&quot;, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>