ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Post_Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>TR_Post_Manual_Steps__c</fullName>
    <inlineHelpText>Manual steps to be done AFTER deployment</inlineHelpText>
    <label>Post Manual Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>