ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Pre_Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>TR_Pre_Manual_Steps__c</fullName>
    <inlineHelpText>Manual steps to be done BEFORE deployment</inlineHelpText>
    <label>PRE Manal Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>