ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Problem__c.field-meta.xml
<CustomField>
    <fullName>TR_Problem__c</fullName>
    <label>Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>