ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>TR_Problem_Description__c</fullName>
    <label>Problem Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>