ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Project__c.field-meta.xml
<CustomField>
    <fullName>TR_Project__c</fullName>
    <label>Project</label>
    <referenceTo>TR_Project__c</referenceTo>
    <relationshipLabel>TR_Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>