ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raised</fullName>
                <default>true</default>
                <label>Raised</label>
            </value>
            <value>
                <fullName>In Analysis</fullName>
            </value>
            <value>
                <fullName>Ready for Development</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Closed - Complete</fullName>
            </value>
            <value>
                <fullName>Closed - Cannot Replicate</fullName>
            </value>
            <value>
                <fullName>Closed - Consolidated</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
                <isActive>false</isActive>
                <label>Escalated</label>
            </value>
            <value>
                <fullName>In Test</fullName>
                <isActive>false</isActive>
                <label>In Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>