ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Status_Severity__c.field-meta.xml
<CustomField>
    <fullName>TR_Status_Severity__c</fullName>
    <formula>TEXT ( TR_Business_Impact__c ) &amp; &quot;/&quot; &amp;  TEXT( TR_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status/Severity</label>
    <type>Text</type>
</CustomField>