ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Technology__c.field-meta.xml
<CustomField>
    <fullName>TR_Technology__c</fullName>
    <label>Issue Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>