ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Execution</label>
    <referenceTo>TR_Test_Execution__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>