ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>TR_Test_Script__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>