ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Ticket_Developer__c.field-meta.xml
<CustomField>
    <fullName>TR_Ticket_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>