ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>TR_Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>