ProTrackDev/force-app/main/default/objects/TR_Ticket__c/fields/TR_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>TR_User_Story__c</referenceTo>
    <relationshipLabel>Tickets (User Story)</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>