ProTrackDev/force-app/main/default/objects/TR_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_Problem__c</columns>
    <columns>TR_Ticket_Developer__c</columns>
    <columns>TR_Logged_by__c</columns>
    <columns>TR_Tester__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>