ProTrackDev/force-app/main/default/objects/TR_Ticket__c/listViews/New_Tickets.listView-meta.xml
<ListView>
    <fullName>New_Tickets</fullName>
    <columns>NAME</columns>
    <columns>TR_Problem__c</columns>
    <columns>TR_Ticket_Developer__c</columns>
    <columns>TR_Logged_by__c</columns>
    <columns>TR_Tester__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TR_Status__c</field>
        <operation>equals</operation>
        <value>Raised</value>
    </filters>
    <label>New Tickets</label>
</ListView>