ProTrackDev/force-app/main/default/objects/TR_Ticket__c/listViews/Tickets_Awaiting_Retest.listView-meta.xml
<ListView>
    <fullName>Tickets_Awaiting_Retest</fullName>
    <columns>NAME</columns>
    <columns>TR_Problem__c</columns>
    <columns>TR_Ticket_Developer__c</columns>
    <columns>TR_Logged_by__c</columns>
    <columns>TR_Tester__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TR_My_Tickets_as_Tester__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TR_Status__c</field>
        <operation>equals</operation>
        <value>Ready for Testing</value>
    </filters>
    <label>My Tickets - Ready For Testing</label>
</ListView>